--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -38,7 +38,7 @@
         </tr>
 
         <tr th:each="user : ${users}">
-            <td th:text="${users.id}">...</td>
+            <td th:text="${users.}">...</td>
             <td th:text="${users.name}">...</td>
             <td th:text="${users.age}">...</td>
         </tr>
